# rad

./: .clang-format  .clang-format-ignore  .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  setup.py  vcpkg-configuration.json  vcpkg.json
libs/rad/: CMakeLists.txt  test.cpp
libs/rad/Core/: BFloat16.cpp  BFloat16.h  BFloat16.test.cpp  Float.cpp  Float.h  Float.test.cpp  Float16.h  Float8.cpp  Float8.h  Float8.test.cpp  Hash.cpp  Hash.h  Integer.cpp  Integer.h  Integer.test.cpp  IntegerFallback.h  Memory.cpp  Memory.h  Memory.test.cpp  MemoryDebug.cpp  MemoryDebug.h  Platform.h  Platform.test.cpp  Random.cpp  Random.h  RefCounted.h  Span.h  Span.test.cpp  String.cpp  String.h  String.test.cpp  TypeTraits.h  Unicode.cpp  Unicode.h  Unicode.test.cpp
libs/rad/Diagnostics/: Exception.cpp  Exception.h  Exception.test.cpp  StackTrace.cpp  StackTrace.h  StackTrace.test.cpp
libs/rad/IO/: Image.cpp  Image.h  Image.test.cpp  Logging.cpp  Logging.h  Logging.test.cpp
libs/rad/System/: Application.cpp  Application.h  Application.test.cpp  CpuInfo.cpp  CpuInfo.h  CpuInfo.test.cpp  OS.cpp  OS.h  OS.test.cpp  Process.cpp  Process.h  Process.test.cpp  SignalHandling.cpp  SignalHandling.h  StackTrace.cpp  StackTrace.h  StackTrace.test.cpp  Thread.cpp  Thread.h  Thread.test.cpp  Time.cpp  Time.h  Time.test.cpp
src/rad/Common/: BFloat16.h  CMakeLists.txt  Common.test.cpp  Flags.h  Float.cpp  Float.h  Float.test.cpp  Float16.h  Float8.h  Geometry.cpp  Geometry.h  Geometry.test.cpp  Hash.h  Integer.cpp  Integer.h  Integer.test.cpp  Math.h  Math.test.cpp  Memory.cpp  Memory.h  MemoryDebug.cpp  MemoryDebug.h  MurmurHash3.cpp  Platform.h  Platform.test.cpp  Random.h  Random.test.cpp  Range.h  Range.test.cpp  RefCounted.h  Result.h  Span.h  Span.test.cpp  String.cpp  String.h  String.test.cpp  TypeTraits.h  UTFConv.cpp  UTFConv.h  UTFConv.test.cpp
src/rad/Common/imported/: .clang-format
src/rad/Container/: CMakeLists.txt  Container.cpp  Container.test.cpp  Queue.h  RingBuffer.h  SmallVector.h  Span.h  Span.test.cpp  StaticVector.h
src/rad/Gui/: CMakeLists.txt  Gui.test.cpp  Gui.test.h  GuiApplication.cpp  GuiApplication.h  GuiApplication.test.cpp  GuiColor.h  GuiCommon.cpp  GuiCommon.h  GuiEventHandler.cpp  GuiEventHandler.h  GuiRenderer.cpp  GuiRenderer.h  GuiRenderer.test.cpp  GuiRenderer.test.h  GuiTexture.cpp  GuiTexture.h  GuiTimer.cpp  GuiTimer.h  RHI.h  Surface.cpp  Surface.h  VulkanFrame.cpp  VulkanFrame.h  VulkanGui.test.cpp  VulkanGui.test.h  VulkanGuiComposition.cpp  VulkanGuiComposition.h  VulkanGuiRenderer.cpp  VulkanGuiRenderer.h  VulkanWindow.cpp  VulkanWindow.h  VulkanWindow.test.cpp  VulkanWindow.test.h  Window.cpp  Window.h  Window.test.cpp  Window.test.h
src/rad/Gui/RHI/: GpuBuffer.cpp  GpuBuffer.h  GpuCommandBuffer.cpp  GpuCommandBuffer.h  GpuComputePipeline.cpp  GpuComputePipeline.h  GpuDevice.cpp  GpuDevice.h  GpuFence.cpp  GpuFence.h  GpuGraphicsPipeline.cpp  GpuGraphicsPipeline.h  GpuPass.cpp  GpuPass.h  GpuSampler.cpp  GpuSampler.h  GpuShader.cpp  GpuShader.h  GpuTexture.cpp  GpuTexture.h  GpuTransferBuffer.cpp  GpuTransferBuffer.h
src/rad/Gui/Shaders/: Compile.py  GuiComposition.frag  GuiComposition.vert
src/rad/Gui/imgui/: .clang-format  imconfig.h
src/rad/Gui/implot/: .clang-format
src/rad/IO/: CMakeLists.txt  File.cpp  File.h  File.test.cpp  IO.test.cpp  IO.test.h  Image.cpp  Image.h  Image.test.cpp  Logging.cpp  Logging.h
src/rad/ML/: CMakeLists.txt  ML.test.cpp  ML.test.h  MLBackend.cpp  MLBackend.h  MLBuffer.cpp  MLBuffer.h  MLCommon.cpp  MLCommon.h  MLContext.cpp  MLContext.h  MLDevice.cpp  MLDevice.h  MLGlobal.cpp  MLGlobal.h  MLOp.cpp  MLOp.h  MLTensor.cpp  MLTensor.h
src/rad/ML/Cpu/: CpuMLActivations.cpp  CpuMLActivations.h  CpuMLActivations.test.cpp  CpuMLBackend.cpp  CpuMLBackend.h  CpuMLBackend.test.cpp  CpuMLBuffer.cpp  CpuMLBuffer.h  CpuMLContext.cpp  CpuMLContext.h  CpuMLDataTypeTraits.h  CpuMLDevice.cpp  CpuMLDevice.h  CpuMLElementWiseUnaryOp.cpp  CpuMLElementWiseUnaryOp.h  CpuMLTensor.cpp  CpuMLTensor.h  CpuMLTensor.test.cpp
src/rad/Multimedia/: AudioDevice.cpp  AudioDevice.h  AudioDevice.test.cpp  AudioMixer.cpp  AudioMixer.h  AudioStream.cpp  AudioStream.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera.test.cpp  Common.cpp  Common.h  Multimedia.test.cpp  Multimedia.test.h  MultimediaCommon.cpp  MultimediaCommon.h
src/rad/Scene/: CMakeLists.txt  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Scene.test.cpp
src/rad/System/: Application.cpp  Application.h  CMakeLists.txt  CpuInfo.cpp  CpuInfo.h  MemoryDebug.cpp  MemoryDebug.h  OS.cpp  OS.h  Process.cpp  Process.h  Process.test.cpp  StackTrace.cpp  StackTrace.h  StackTrace.test.cpp  System.test.cpp  System.test.h  Thread.cpp  Thread.h  Time.cpp  Time.h  Time.test.cpp
src/rad/Vulkan/: CMakeLists.txt  GLSLCompiler.cpp  SpvContext.cpp  Vulkan.test.cpp  Vulkan.test.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanCommon.cpp  VulkanCommon.h  VulkanCommon.test.cpp  VulkanCore.h  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanEvent.cpp  VulkanEvent.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQuery.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.cpp  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTestContext.cpp  VulkanTestContext.h  (+1 more)
src/rad/Vulkan/Compiler/: GLSLCompiler.cpp  GLSLCompiler.h  SpvContext.cpp  SpvContext.h
src/rad/Vulkan/Core/: VulkanBuffer.cpp  VulkanCommand.cpp  VulkanCommand.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEvent.cpp  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanQuery.cpp  VulkanQuery.h  VulkanRenderPass.cpp  VulkanSampler.cpp  VulkanSampler.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanSurface.cpp  VulkanSurface.h  (+1 more)
(+43 files in other folders)
